--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -8,17 +8,9 @@ body {
 }
 
 .content {
-    width: 100vw;
-    height: 100vh;
     padding: 1rem;
-    background-color: #fff;
+    background-color: #FFF;
+    height: 100vh;
+    width: 100vw;
 }
 
-@media screen and (min-width: 992px) {
-    .content {
-        max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
-    }
-}
